# cmake-example

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
scripts/: build.sh  cmake.sh  functions.sh
src/: example.cpp
test/: CMakeLists.txt  test.cpp
